--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   flutter_svg: ^2.0.5
   http: ^0.13.3
+  flutter_screenutil: ^5.7.0
+  circular_countdown_timer: ^0.2.3
+  audioplayers: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
