--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   flutter_screenutil: ^5.7.0
   circular_countdown_timer: ^0.2.3
   audioplayers: ^4.1.0
+  intl: ^0.18.1
+  fl_chart: ^0.62.0
+  animated_toggle_switch: ^0.8.1
+  simple_animation_progress_bar: ^1.6.0
+  scrollable_positioned_list: ^0.3.8
+
 
 dev_dependencies:
   flutter_test:
