--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   animated_toggle_switch: ^0.8.1
   simple_animation_progress_bar: ^1.6.0
   scrollable_positioned_list: ^0.3.8
+  readmore: ^2.2.0
+  dotted_dashed_line: ^0.0.3
 
 
 dev_dependencies:
