--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   readmore: ^2.2.0
   dotted_dashed_line: ^0.0.3
   shared_preferences: ^2.2.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  google_fonts: ^4.0.4
+  google_sign_in: ^6.1.6
 
 
 dev_dependencies:
