--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_auth: ^4.16.0
   google_fonts: ^4.0.4
   google_sign_in: ^6.1.6
+  cloud_firestore: ^4.14.0
 
 
 dev_dependencies:
