--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_fonts: ^4.0.4
   google_sign_in: ^6.1.6
   cloud_firestore: ^4.14.0
+  smooth_page_indicator: ^1.1.0
 
 
 dev_dependencies:
